# DynaMechs

./: .cproject  .gitignore  .project  CMakeLists.txt  CustomTaskSpaceController.cpp  CustomTaskSpaceController.h  DM5.0_changeLog  Doxyfile  README  interpret_xan_file  tmp-changelog
src/aquarobot/: Aquarobo.h  Body.cpp  Body.hpp  CMakeLists.txt  EulerAng.cpp  EulerAng.hpp  Gait.hpp  GaitAlgorithm.cpp  GaitAlgorithm.h  Leg.cpp  Leg.hpp  LegLink.cpp  LegLink.hpp  MatrixMy.cpp  MatrixMy.hpp  Posture.cpp  Posture.hpp  Robot.cpp  Robot.hpp  Vector.cpp  Vector.hpp  aquarobot  aquarobot.cpp  environment_sm.cfg  nps_aquarobot_motors.dm  nps_armlink1.scm  nps_armlink2.scm  nps_armlink3.scm  nps_footpad.xan  nps_hexapod.dm  nps_leglink1.scm  nps_leglink1_sm.scm  nps_leglink2.scm  nps_leglink2_sm.scm  nps_leglink3.scm  nps_leglink3_sm.scm  nps_torso.scm  nps_torso_sm.scm  simulation.cfg
src/contact_demo/: CMakeLists.txt  run_in_context
src/contact_demo/Matlab scripts/: generat_DynaMechs_Terrain.m  generate_DynaMechs_Terrain.m  readColData.m  readData.m  setDataDir.m
src/contact_demo/config/: box.dm  box1.dm  boxSingleDC.dm  contact_demo.cfg  disc.dm  environment.env
src/contact_demo/srcs/: BasicGLPane.cpp  BasicGLPane.h  ContactDemoDataLogger.cpp  ContactDemoDataLogger.h  ContactMainFrame.cpp  ContactMainFrame.h  DataLogger.cpp  MainFrame.cpp  SimulationThread.cpp  SimulationThread.h  globalFunctions.cpp  globalFunctions.h  globalVariables.cpp  globalVariables.h  globals.cpp  globals.h  main.cpp  userGraphics.cpp  user_graphics.cpp
src/dm/: CMakeLists.txt  dm.h  dmActuator.cpp  dmActuator.hpp  dmArticulation.cpp  dmArticulation.hpp  dmClosedArticulation.cpp  dmClosedArticulation.hpp  dmContactModel.cpp  dmContactModel.hpp  dmContactSystem.cpp  dmContactSystem.hpp  dmDynamicContactModel.cpp  dmDynamicContactModel.hpp  dmEnvironment.cpp  dmEnvironment.hpp  dmForce.cpp  dmForce.hpp  dmIntegEuler.cpp  dmIntegEuler.hpp  dmIntegRK4.cpp  dmIntegRK4.hpp  dmIntegRK45.cpp  dmIntegRK45.hpp  dmIntegrator.cpp  dmIntegrator.hpp  dmLink.cpp  dmLink.hpp  dmMDHLink.cpp  dmMDHLink.hpp  dmMobileBaseLink.cpp  dmMobileBaseLink.hpp  dmObject.cpp  dmObject.hpp  dmPrismaticLink.cpp  dmPrismaticLink.hpp  dmQuaternionLink.cpp  dmQuaternionLink.hpp  dmRevDCMotor.cpp  dmRevDCMotor.hpp  (+27 more)
src/dmgl/: CMakeLists.txt  dmGL.h  dmGLCamera.cpp  dmGLCamera.hpp  dmGLFlyCamera.cpp  dmGLFlyCamera.hpp  dmGLMouse.cpp  dmGLMouse.hpp  dmGLPolarCamera.cpp  dmGLPolarCamera.hpp  dmGLPolarCamera_yup.cpp  dmGLPolarCamera_yup.hpp  dmGLPolarCamera_zup.cpp  dmGLPolarCamera_zup.hpp
src/dmu/: CMakeLists.txt  dmLoadFile.cpp  dmLoadFile.h  dmLoadFile_dm.cpp  dmLoadFile_dm203.cpp  dmLoadFile_dm21.cpp  dmLoadFile_dm30.cpp  dmLoadFile_dm40.cpp  dmLoadFile_env.cpp  dmUtils.cpp  dmu.h  glLoadModels.cpp  glLoadModels.h
src/flywheel_biped/: CMakeLists.txt  biped_debug.m  crossm.m  flywheel_biped.cfg  flywheel_biped.cpp  flywheel_biped.dm  function_prototypes.h  functions_A.cpp  functions_B.cpp  functions_C.cpp  functions_D.cpp  global.cpp  global.h  sR.txt  sp.txt
src/flywheel_biped/biped_model/: flat_torso.xan
src/flywheel_biped/m/: PopulateRobotArray.m  SetState.m  crossExtract.m  defineBiped.m  drawBiped.m  main.m  plotRows.m  scatterRows.m
src/huboplus1/: CMakeLists.txt  run_in_context
src/huboplus1/config/: hbp1.cfg  huboplus.dm  huboplus_zero.dm  view.txt
src/huboplus1/ctrl_src/: DataLogger.cpp  DataLogger.h  HuboBalanceController.cpp  HuboBalanceController.h  HuboController.cpp  HuboController.h  HumanoidController.cpp  HumanoidController.h  HumanoidControllerStateMachine.cpp  HumanoidControllerStateMachine.h  TaskSpaceController.h  TaskSpaceControllerA.cpp  TaskSpaceControllerA.h  TaskSpaceControllerConic.cpp  TaskSpaceControllerConic.h  control_defs.h  globalFunctions.h
src/huboplus1/gui_src/: BasicGLPane.cpp  BasicGLPane.h  MainFrame.cpp  MainFrame.h  SimulationThread.cpp  SimulationThread.h  globalDefs.h  globalVariables.cpp  globalVariables.h  userGraphics.cpp  wxMain.cpp
src/humanoid/: BasicGLPane.cpp  BasicGLPane.h  CMakeLists.txt  CubicSpline.cpp  CubicSpline.h  CubicSplineTrajectory.cpp  CubicSplineTrajectory.h  DataLogger.cpp  DataLogger.h  GlobalDefines.cpp  GlobalDefines.h  GlobalFunctions.cpp  GlobalFunctions.h  MainFrame.cpp  MainFrame.h  SimulationThread.cpp  SimulationThread.h  SplineManager.cpp  TaskSpaceController.cpp  TaskSpaceController.h  TaskSpaceController2.cpp  TaskSpaceController2.h  humanoid.cfg  humanoid.cpp  humanoid.dm  humanoid.env  humanoidBuild.cfg  humanoidBuild.dm  humanoidControl.cpp  humanoidControl.h  humanoidDataLogging.cpp  humanoidDataLogging.h  humanoidWx.cpp  obj_plate_z.xan  pendulum.cfg  pendulum.dm30  run_in_context  wxBoxSlider.cpp  wxBoxSlider.h  wxNumericTextCtrl.cpp
src/humanoid/config/: SlipData.txt  human.cfg  human.dm  humanoid.cfg  humanoid.dm  humanoid.env  humanoid_box.cfg  humanoid_box.dm  humanoid_box.env  obj_mace.xan  pendulum.env  view.txt
src/humanoid/cpp/: BalanceDemoStateMachine.cpp  BasicGLPane.cpp  BezierCurve.cpp  CoordinatedCubicSpline.cpp  CubicSplineTrajectory.cpp  DataLogger.cpp  GlobalDefines.cpp  GlobalFunctions.cpp  Humanoid.cpp  HumanoidController.cpp  HumanoidDataLogger.cpp  HumanoidMainFrame.cpp  HumanoidStateMachineController.cpp  JumpingStateMachine.cpp  LipModel.cpp  MainFrame.cpp  RunningStateMachine.cpp  SimulationThread.cpp  SlipModel.cpp  (+11 more)
src/kurmet/: CMakeLists.txt  debug.m  flat_kurmet.dm  functions.cpp  global_typedef.h  kurmet.cfg  kurmet.cpp  kurmet.dm  kurmet.env  scratch.m
src/optimization_test/: CMakeLists.txt  run_in_context
src/showRobot/: CMakeLists.txt  run_in_context
src/wxDMV/: CMakeLists.txt  environment.env  global.cpp  global.h  main.cpp  main.h  userControl.cpp
src/wxdmgl/: CMakeLists.txt  wxDMGL.h  wxDMGLCamera.cpp  wxDMGLCamera.hpp  wxDMGLFlyCamera.cpp  wxDMGLFlyCamera.hpp  wxDMGLMouse.cpp  wxDMGLMouse.hpp  wxDMGLPolarCamera.cpp  wxDMGLPolarCamera.hpp  wxDMGLPolarCamera_yup.cpp  wxDMGLPolarCamera_yup.hpp  wxDMGLPolarCamera_zup.cpp  wxDMGLPolarCamera_zup.hpp
src/xan_viewer/: CMakeLists.txt  xan_viewer.cpp
(+270 files in other folders)
