cmake_minimum_required(VERSION 2.8)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/dm  ${PROJECT_SOURCE_DIR}/src/dmu ${PROJECT_SOURCE_DIR}/src/dmgl)
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)

SET(XAN_VIEWER_SRC  xan_viewer.cpp )
ADD_EXECUTABLE(xan_viewer ${XAN_VIEWER_SRC})
TARGET_LINK_LIBRARIES(xan_viewer ${GLUT_LIBRARY} ${OPENGL_LIBRARY} dm dmu dmgl)

INSTALL(TARGETS xan_viewer
                 RUNTIME DESTINATION bin)


